# black-box

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml
scripts/: generate_network_chart.py
src/: broadcast.rs  cli.rs  collector.rs  config.rs  config.toml  event.rs  file_watcher.rs  index.rs  indexed_reader.rs  main.rs  protection.rs  reader.rs  recorder.rs  storage.rs  webui.rs
src/commands/: config.rs  export.rs  mod.rs  monitor.rs  status.rs  systemd.rs
src/webui/: auth.rs  health.rs  mod.rs  playback.rs  routes.rs  server.rs  websocket.rs
src/webui/assets/: index.html
systemd/: black-box-hardened.service  black-box-protected.service  black-box.service
