[package]
name = "black-box"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core utilities
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
time = { version = "0.3", features = ["serde", "formatting"] }
glob = "0.3"

# Async runtime and web framework
tokio = { version = "1", features = ["full"] }
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix-files = "0.6"
futures-util = "0.3"

# Security
bcrypt = "0.15"
base64 = "0.22"

# Channels for sync/async bridge
crossbeam-channel = "0.5"

# Configuration
toml = "0.8"

[dev-dependencies]
tempfile = "3"
actix-rt = "2"

