[package]
name = "black-box"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core utilities
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
glob = "0.3"
clap = { version = "4", features = ["derive"] }
flate2 = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
chrono = "0.4"
libc = "0.2"
memmap2 = "0.9"
inotify = "0.10"

# Async runtime and web framework
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
futures-util = "0.3"

# Security
bcrypt = "0.15"
base64 = "0.22"

# Channels for sync/async bridge
crossbeam-channel = "0.5"

# Configuration
toml = "0.8"

[dev-dependencies]
tempfile = "3"

